improvements on class, routes and module rules

--- a/app/translate/es.lang
+++ b/app/translate/es.lang
@@ -39,3 +39,12 @@ your password=your password
 Log In=Log In
 Forgot your password?=Forgot your password?
 Wrong username or password=Wrong username or password
+months=months
+Dashboard=Dashboard
+Overview=Overview
+Domain=Domain
+Project Name=Project Name
+Registration Date=Registration Date
+Status=Status
+=
+Actions=Actions
