feat: add select field and improvements at domains validation

--- a/app/translate/es.lang
+++ b/app/translate/es.lang
@@ -71,3 +71,27 @@ Select a domain=Select a domain
 Setup your domain=Setup your domain
 Select a validation method=Select a validation method
 teste=teste
+Copy this meta-tag:=Copy this meta-tag:
+Paste the meta-tag into the <head> ... <head> section of the website’s home page HTML source, and publish the page.=Paste the meta-tag into the <head> ... <head> section of the website’s home page HTML source, and publish the page.
+Paste the meta-tag into the &lt;head&gt; ... &lt;head&gt; section of the website&rsquo;s home page HTML source, and publish the page.=Paste the meta-tag into the &lt;head&gt; ... &lt;head&gt; section of the website&rsquo;s home page HTML source, and publish the page.
+Note: Verification will fail if the meta tag code is outside the &lt;head&gt; section or in a section dynamically loaded by JavaScript.=Note: Verification will fail if the meta tag code is outside the &lt;head&gt; section or in a section dynamically loaded by JavaScript.
+Once you have published the homepage, confirm that the meta tag is visible by going to %s and checking the HTML source code.=Once you have published the homepage, confirm that the meta tag is visible by going to %s and checking the HTML source code.
+Click in Verify Domain=Click in Verify Domain
+Note: Nota: It may take up to 72 hours for Facebook to find the meta-tag code. If the domain status is still not verified, you&rsquo;ll need to click Verificar dom&iacute;nio again or confirm the meta-tag is listed=Note: Nota: It may take up to 72 hours for Facebook to find the meta-tag code. If the domain status is still not verified, you&rsquo;ll need to click Verificar dom&iacute;nio again or confirm the meta-tag is listed
+Go to your domain register, log into your account and find the DNS records section.=Go to your domain register, log into your account and find the DNS records section.
+Follow the instructions to add this TXT record to your DNS configuration:=Follow the instructions to add this TXT record to your DNS configuration:
+Type:=Type:
+Host:=Host:
+Value:=Value:
+TTL:=TTL:
+Use a DNS TXT lookup tool to confirm the record has been updated on your servers before clicking Verify Domain.=Use a DNS TXT lookup tool to confirm the record has been updated on your servers before clicking Verify Domain.
+Click Verify Domain=Click Verify Domain
+Note: It can take up to 72 hours for the change to propagate to your servers. If the domain status is still Unverified, you will need to click Verify Domain again.=Note: It can take up to 72 hours for the change to propagate to your servers. If the domain status is still Unverified, you will need to click Verify Domain again.
+Download the HTML verification file. Do not modify this file after downloading it.=Download the HTML verification file. Do not modify this file after downloading it.
+Download verification file=Download verification file
+Upload the file to the domain root directory: %s=Upload the file to the domain root directory: %s
+Usually the site root is named public_html or www=Usually the site root is named public_html or www
+You will know that the HTML verification file has been successfully uploaded if the verification code appears on your website: %s=You will know that the HTML verification file has been successfully uploaded if the verification code appears on your website: %s
+Access destination path=Access destination path
+Verify Domain=Verify Domain
+Register new domain=Register new domain
